@@ -151,43 +151,44 @@ int fpowers, reset;
 
 POWERENT gen_powers[] =
 {
-{(char *)"quota",		POW_CHG_QUOTAS,	0, 0,	ph_wiz},
-{(char *)"chown_anything", 	POW_CHOWN_ANY,  0, 0,	ph_wiz},
 {(char *)"announce", 		POW_ANNOUNCE,	0, 0,	ph_wiz},
-{(char *)"boot",		POW_BOOT,	0, 0,	ph_wiz},
-{(char *)"halt",		POW_HALT,	0, 0,	ph_wiz},
-{(char *)"control_all",		POW_CONTROL_ALL,0, 0,	ph_god},
-{(char *)"expanded_who",	POW_WIZARD_WHO, 0, 0,	ph_wiz},
-{(char *)"see_all",		POW_EXAM_ALL,	0, 0,	ph_wiz},
-{(char *)"prog",		POW_PROG,	0, 0,	ph_wiz},
 {(char *)"attr_read",		POW_MDARK_ATTR,	0, 0,	ph_wiz},
 {(char *)"attr_write",		POW_WIZ_ATTR,	0, 0,	ph_wiz},
+{(char *)"boot",		POW_BOOT,	0, 0,	ph_wiz},
+{(char *)"builder",		POW_BUILDER,	POWER_EXT, 0,	ph_wiz},
+{(char *)"chown_anything", 	POW_CHOWN_ANY,  0, 0,	ph_wiz},
+{(char *)"cloak",		POW_CLOAK,	POWER_EXT, 0,	ph_god},
+{(char *)"comm_all",		POW_COMM_ALL,	0, 0,	ph_wiz},
+{(char *)"control_all",		POW_CONTROL_ALL,0, 0,	ph_god},
+{(char *)"expanded_who",	POW_WIZARD_WHO, 0, 0,	ph_wiz},
 {(char *)"find_unfindable",	POW_FIND_UNFIND,0, 0,	ph_wiz},
 {(char *)"free_money",		POW_FREE_MONEY, 0, 0,	ph_wiz},
 {(char *)"free_quota",		POW_FREE_QUOTA, 0, 0,	ph_wiz},
+{(char *)"guest",		POW_GUEST,	0, 0,	ph_god},
+{(char *)"halt",		POW_HALT,	0, 0,	ph_wiz},
 {(char *)"hide",		POW_HIDE,	0, 0,	ph_wiz},
 {(char *)"idle",		POW_IDLE, 	0, 0,	ph_wiz},
-{(char *)"search",		POW_SEARCH,	0, 0,	ph_wiz},
+{(char *)"link_any_home",	POW_LINKHOME,	POWER_EXT, 0,	ph_wiz},
+{(char *)"link_to_anything",	POW_LINKTOANY,	POWER_EXT, 0,	ph_wiz},
+{(char *)"link_variable",	POW_LINKVAR,	POWER_EXT, 0,	ph_wiz},
 {(char *)"long_fingers",	POW_LONGFINGERS,0, 0,	ph_wiz},
-{(char *)"comm_all",		POW_COMM_ALL,	0, 0,	ph_wiz},
+{(char *)"no_destroy",		POW_NO_DESTROY, 0, 0,	ph_wiz},
+{(char *)"open_anywhere",	POW_OPENANYLOC,	POWER_EXT, 0,	ph_wiz},
+{(char *)"pass_locks",		POW_PASS_LOCKS, 0, 0,   ph_wiz},
+{(char *)"poll",		POW_POLL,	0, 0,	ph_wiz},
+{(char *)"prog",		POW_PROG,	0, 0,	ph_wiz},
+{(char *)"quota",		POW_CHG_QUOTAS,	0, 0,	ph_wiz},
+{(char *)"search",		POW_SEARCH,	0, 0,	ph_wiz},
+{(char *)"see_all",		POW_EXAM_ALL,	0, 0,	ph_wiz},
 {(char *)"see_queue",		POW_SEE_QUEUE,	0, 0,	ph_wiz},
 {(char *)"see_hidden",		POW_SEE_HIDDEN, 0, 0,	ph_wiz},
-{(char *)"watch_logins",	POW_WATCH,	0, 0,	ph_wiz},
-{(char *)"poll",		POW_POLL,	0, 0,	ph_wiz},
-{(char *)"no_destroy",		POW_NO_DESTROY, 0, 0,	ph_wiz},
-{(char *)"guest",		POW_GUEST,	0, 0,	ph_god},
 {(char *)"stat_any",		POW_STAT_ANY,	0, 0,	ph_wiz},
 {(char *)"steal_money",		POW_STEAL,	0, 0,	ph_wiz},
 {(char *)"tel_anywhere",	POW_TEL_ANYWHR, 0, 0,	ph_wiz},
 {(char *)"tel_anything",	POW_TEL_UNRST,	0, 0,	ph_wiz},
 {(char *)"unkillable",		POW_UNKILLABLE, 0, 0,	ph_wiz},
-{(char *)"pass_locks",		POW_PASS_LOCKS, 0, 0,   ph_wiz},
-{(char *)"builder",		POW_BUILDER,	POWER_EXT, 0,	ph_wiz},
-{(char *)"link_any_home",	POW_LINKHOME,	POWER_EXT, 0,	ph_wiz},
-{(char *)"link_variable",	POW_LINKVAR,	POWER_EXT, 0,	ph_wiz},
-{(char *)"link_to_anything",	POW_LINKTOANY,	POWER_EXT, 0,	ph_wiz},
-{(char *)"open_anywhere",	POW_OPENANYLOC,	POWER_EXT, 0,	ph_wiz},
 {(char *)"use_sql",		POW_USE_SQL,	POWER_EXT, 0,	ph_god},
+{(char *)"watch_logins",	POW_WATCH,	0, 0,	ph_wiz},
 {NULL,				0,		POWER_EXT, 0,	0}};
 
 /* *INDENT-ON* */
