@@ -174,6 +174,14 @@ CHANGES TO FLAGS AND POWERS
   not a player sees an object as DARK. Based loosely on a patch by
   Malcolm Campbell (Calum).
 
+- There is a new power, Cloak, which is God-settable. It enables an
+  object which can listen (such a player or puppet) to be dark in the
+  room contents and movement messages; previously, this was only true
+  for listening objects both Dark and Wizard. Note that since wizard
+  Dark is now affected by the visible_wizards config parameter, if that
+  parameter is enabled, wizards will need this power in order to
+  become invisible.
+
 - The new ORPHAN flag, when set on an object, prevents the object from
   inheriting $-commands from its parents (just like objects in the master
   room do not inherit $-commands from their parents). This allows you to
